<resources>
    <string name="app_name">Ecommute</string>
    <string name="title_foro">Foro</string>
    <string name="title_huella">Huella</string>
    <string name="title_ruta">Ruta</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_puntos">Puntos</string>
    <string name="pre_origen">De: \u0020</string>
    <string name="pre_destino">A: \u0020</string>
    <string name="textTitle">Detalles ruta</string>
    <string name="textButton">Eliminar</string>
    <string name="textEditar">Editar</string>
    <string name="textGuardar">Guardar</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="SignUp">Registrarse</string>
    <string name="Origen">Origen</string>
    <string name="Destino">Destino</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="NombredeUsuario">Nombre de Usuario</string>
    <string name="Detalles">Detalles</string>
    <string name="Puntosacumulados">Puntos Acumulados</string>
    <string name="Historial">Historial</string>
    <string name="Logout">Cerrar Sesión</string>
    <string name="Eliminarperfil">Eliminar Perfil</string>
    <string name="Buscarrutas">Buscar rutas</string>
    <string name="EditarPerfil">Editar Perfil</string>
    <string name="ConsumoFuel">Consumo de Combustible</string>
    <string name="TipoCombustible">Tipo de Combustible</string>
    <string name="CambiarDatos">Editar Datos</string>
    <string name="Crear">Crear</string>
    <string name="Titulo_evento">Título</string>
    <string name="Localización_evento">Localización</string>
    <string name="Descripción_evento">Descripción</string>


    <string name="textVRutasFav">Rutas Favoritas</string>
    <string name="Último_mes">Ultimo Mes</string>
    <string name="TextView">TextView</string>
    <string name="Mis_gráficos">Mis gráficos</string>
    <string name="CO2">CO2</string>
    <string name="Cerrar_informe">Cerrar Informe</string>
    <string name="Nivel">Nivel</string>
    <string name="explnivel">Muestra el nivel actual, entre 1 y 15</string>
    <string name="Puntos">Puntos</string>
    <string name="Puntosexp">Muestra la cantidad de puntos actuales dentro del nivel respecto a la cantidad de puntos necesarios para subir al siguiente.</string>
    <string name="Icono">Icono</string>
    <string name="explicono">El icono que se observa en el centro de la pantalla irá mejorando a medida que aumente tu nivel, ¡realiza más rutas para ver cómo crece la planta!</string>
    <string name="Coche">Coche</string>
    <string name="Vermicalendario">Ver mi Calendario</string>
    <string name="EditProfilePic">Editar foto de perfil</string>
    <string name="exportroute">Exportar ruta</string>
    <string name="server_client_id" translatable="false">60686683765-v58iemvsluk42sp8gd8co48tjk2mv5nk.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar_comentario">Editar Comentario</string>

</resources>