<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_foro"
        android:icon="@drawable/ic_baseline_forum_24"
        android:title="@string/title_foro" />

    <item
        android:id="@+id/navigation_huella"
        android:icon="@drawable/ic_baseline_eco_24"
        android:title="@string/title_huella" />

    <item
        android:id="@+id/navigation_ruta"
        android:icon="@drawable/ic_baseline_pin_drop_24"
        android:title="@string/title_ruta" />

    <item
        android:id="@+id/navigation_puntos"
        android:icon="@drawable/ic_baseline_emoji_events_24"
        android:title="@string/title_puntos" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_perfil" />

</menu>