<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:andoid="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/titulo"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Titulo_evento"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        andoid:layout_constraintBottom_toTopOf="@+id/localizacion_evento"
        andoid:layout_constraintEnd_toEndOf="parent"
        andoid:layout_constraintStart_toStartOf="parent"
        andoid:layout_constraintTop_toTopOf="parent"
        andoid:layout_constraintVertical_bias="0.97"
        tools:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/localizacion_evento"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:layout_below="@id/titulo"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/Localización_evento"
        andoid:layout_constraintBottom_toTopOf="@+id/descripcion_evento"
        andoid:layout_constraintEnd_toEndOf="parent"
        andoid:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/descripcion_evento"
        android:layout_width="307dp"
        android:layout_height="150dp"
        android:layout_above="@id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/Descripción_evento"
        andoid:layout_constraintBottom_toTopOf="@+id/crear_evento"
        andoid:layout_constraintEnd_toEndOf="parent"
        andoid:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/crear_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="168dp"
        android:text="@string/Crear"
        andoid:layout_constraintBottom_toBottomOf="parent"
        andoid:layout_constraintEnd_toEndOf="parent"
        andoid:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>