<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTitle"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
                <ImageButton
                    android:id="@+id/cerrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_close_24" />
            </LinearLayout>


            <TextView
                android:id="@+id/dorigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/ddestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/dconsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/dcomparacion"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="TextView" />

            <Button
                android:id="@+id/editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textEditar" />

            <Button
                android:id="@+id/messageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textButton" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>